--- a/app/src/main/res/layout/recycler_layout_forces.xml
+++ b/app/src/main/res/layout/recycler_layout_forces.xml
@@ -1,24 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
 
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
-           android:textSize="30sp"
+           android:textSize="20sp"
            android:id="@+id/ID"
            android:layout_weight="1"
            android:textColor="@android:color/background_dark"
-           android:padding="10dp"/>
+           android:padding="5dp"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/name"
            android:textColor="@android:color/background_dark"
-           android:padding="10dp"
-           android:textSize="30sp"/>
+           android:padding="5dp"
+           android:textSize="20sp"/>
 
 </LinearLayout>
